<resources>
    <string name="app_name">KaamWale</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="your_helping_hand">Your Helping Hand !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>

    //Description
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="termscarwash"> * Service Will Be Provided For 26 Days In a Month.\n\n * Two Times Interior Cleaning In a Month. \n\n  * Car Will Be Cleaned By a Proper Cleaning Material.\n\n * 4 Times Foam Wash In a Month.\n\n * In Case Of Single Detailed Wash Charges might Be More.</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="Privacy_Policy">⦁ Effective Date: 05/04/2023\n ⦁ We at Kaamwale.inc are committed to protecting your privacy. This privacy policy explains how we collect, use, and share your personal information in connection with our KaamWale Application. \n⦁ Information We Collect \n⦁ We collect the following types of information when you use our Service: \n⦁ Personal Information: We collect personal information that you provide to us, such as your name, email address, and phone number. \n⦁ Usage Information: We collect information about how you use our Service, such as your device type, browser type, IP address, and the pages you view. \n⦁ Location Information: With your permission, we may collect information about your location to provide you with location-based services. \n⦁ Payment Information: We may collect payment information when you make a purchase through our Service. \n⦁ How We Use Your Information \n⦁ We use your information for the following purposes: \n⦁ To provide and improve our Service. \n⦁ To communicate with you about our Service and respond to your inquiries. \n⦁ To send you promotional emails and other communications about our products and services. \n⦁ To detect, prevent, and address fraud, security, and technical issues. \n⦁ To comply with legal obligations. \n⦁ How We Share Your Information \n⦁ We may share your information with the following third parties: \n⦁ Service Providers: We may share your information with third-party service providers that perform services on our behalf, such as hosting, analytics, and payment processing. \n⦁ Business Partners: We may share your information with our business partners to offer you promotions and other products and services. \n⦁ Legal Purposes: We may share your information to comply with legal obligations or to protect our rights or property. \n⦁ Your Choices \n⦁ You have the following choices regarding your information: \n⦁ Opt-Out of Promotional Communications: You may opt-out of receiving promotional communications from us by following the instructions in the communication or by contacting us at kaamwale.inc@yahoo.com . \n⦁ Location Information: You may opt-out of providing location information by changing your device settings. \n⦁ Access, Correction, and Deletion: You may access, correct, or delete your personal information by contacting us at kaamwale.inc@yahoo.com . \n⦁ Security \n⦁ We take reasonable measures to protect your information from unauthorized access, use, or disclosure. However, no method of transmission over the internet or electronic storage is 100% secure. \n⦁ Children\'s Privacy \n⦁ Our Service is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. \n⦁ Changes to This Privacy Policy \n⦁ We may update this privacy policy from time to time. We will notify you of any material changes by posting the new privacy policy on our website. \n⦁ Contact Us \n⦁ If you have any questions or concerns about this privacy policy or our practices, please contact us at kaamwale.inc@yahoo.com . \n⦁ Thank you for using KaamWale !</string>


</resources>
